proper spacing and fix text

--- a/css/main.css
+++ b/css/main.css
@@ -99,16 +99,17 @@ body{
 		margin-right: auto;
 		width: auto;
 }
-#primary_links ul li{
+#primary_links li{
 
 	display: inline;
+	text-transform: uppercase;
 
 }
-#primary_links ul li a{
-	
-	text-decoration: none;
-	
-	color: white;
+#primary_links a{
+		letter-spacing: 3px;
+		color: white;
+		text-decoration: none;
+		font-family: opensans;
 }
 #primary_links{
 	background-color: #3f8252;
@@ -130,7 +131,7 @@ body{
 	height: 64px;	
 }
 #bbblogo img{
-	margin-left: 280px;
+	margin-left: 300px;
 	height: 32px;
 	width: 124px;
 	
@@ -143,7 +144,8 @@ body{
 #fblogo img{
 	height: 32px;
 	width: 32px;
-	margin-top: -2px;
+	margin-left: 875px;
+	margin-top: -90px;
 }
 #fbbarcolorbar iframe{
 	margin: 5px 19px 8px 0px;
